--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Pages Exercise</title>
-	<link href="style.css" rel="stylesheet" type="text/css">
+    <meta charset="UTF-8">
+    <title>Pages Exercise</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<h1>Andrew Lefurge</h1>
-	<h2>IGME 230</h2>
+    <div class="card">
+        <div class="profile">
+            <img src="portrait.jpg">
+        </div>
+        <h1>Andrew Lefurge</h1>
+        <h2>IGME 230</h2>
+    </div>
+    <div class="card">
+        
+    </div>
+    
+
 </body>
 </html>
