--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Pages Exercise</title>
@@ -15,9 +16,15 @@
         <h2>IGME 230</h2>
     </div>
     <div class="card">
-        
+        <h2>Projects</h2>
+        <ul>
+            <li><a href="index.html">Project 1: Basic Personal Page</a></li>
+            <li><a href="index.html">Project 2</a></li>
+        </ul>
     </div>
-    
-
+    <div class="card">
+        <h2>Exercises</h2>
+    </div>
 </body>
+
 </html>
