--- a/index.html
+++ b/index.html
@@ -2,29 +2,31 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Pages Exercise</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+	<meta charset="UTF-8">
+	<title>Pages Exercise</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <div class="card">
-        <div class="profile">
-            <img src="portrait.jpg">
-        </div>
-        <h1>Andrew Lefurge</h1>
-        <h2>IGME 230</h2>
-    </div>
-    <div class="card">
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="index.html">Project 1: Basic Personal Page</a></li>
-            <li><a href="index.html">Project 2</a></li>
-        </ul>
-    </div>
-    <div class="card">
-        <h2>Exercises</h2>
-    </div>
+	<!-- name and picture card -->
+	<div class="card">
+		<div class="profile">
+			<img src="portrait.jpg">
+		</div>
+		<h1>Andrew Lefurge</h1>
+		<h2><span>IGME 230</span></h2>
+	</div>
+	<!-- projects card-->
+	<div class="card">
+		<h2>Projects</h2>
+		<ul>
+			<li><a href="index.html">Project 1: Basic Personal Page</a></li>
+			<li><a href="index.html">Project 2</a></li>
+		</ul>
+	</div>
+	<div class="card">
+		<h2>Exercises</h2>
+	</div>
 </body>
 
 </html>
