Fixed Missing Changes from Earlier Commits

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul>
             <li><a href="week1/week1.html">Week 1: Tools Setup and .htaccess</a></li>
             <li><a href="index.html">Exercise 2:</a></li>
-            <li><a href="index.html">Week 3: Advanced HTML Markup</a></li>
+            <li><a href="week3a/week3a.html">Week 3: Advanced HTML Markup</a></li>
             <li><a href="index.html">Exercise 4:</a></li>
             <li><a href="index.html">Exercise 5:</a></li>
             <li><a href="index.html">Exercise 6:</a></li>
