--- a/week3a/week3a.html
+++ b/week3a/week3a.html
@@ -21,23 +21,28 @@
                 <td>206 Walnut St., Douglas, Wyoming, United States</td>
             </tr>
             <tr>
-                <th>Location</th>
-                <td>206 Walnut St., Douglas, Wyoming, United States</td>
+                <th>Coordinates</th>
+                <td>42°45′47″N 105°23′06″WCoordinates: 42°45′47″N 105°23′06″W</td>
             </tr>
-            <tr>                <td>Location</td>
-                <td>206 Walnut St., Douglas, Wyoming, United States</td>
-            </tr>
-            <tr>
-
+            <tr> 
+                <th>Area</th>
+                <td>less than one acre</td>
             </tr>
             <tr>
-
+                <th>Built</th>
+                <td>1914</td>
             </tr>
             <tr>
-
+                <th>Architectural style</th>
+                <td>Classical Revival</td>
             </tr>
             <tr>
-
+                <th>NRHP reference #</th>
+                <td>08001003[1]</td>
+            </tr>
+            <tr>
+                <th>Added to NRHP</th>
+                <td>October 10, 2008</td>
             </tr>
 
         </table>
