--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <ul>
             <li><a href="week1/week1.html">Week 1: Tools Setup and .htaccess</a></li>
             <li><a href="index.html">Exercise 2:</a></li>
-            <li><a href="week3a/week3a.html">Week 3: Advanced HTML Markup</a></li>
-            <li><a href="index.html">Exercise 4:</a></li>
+            <li><a href="week3a/week3a.html">Week 3a: Advanced HTML Markup</a></li>
+            <li><a href="week3b/week3b.html">Week 3b: Advanced CSS</a></li>
             <li><a href="index.html">Exercise 5:</a></li>
             <li><a href="index.html">Exercise 6:</a></li>
         </ul>
