Added Week 2b exercise, added comments, and finished advanced css

--- a/index.html
+++ b/index.html
@@ -2,36 +2,38 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Pages Exercise</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+	<meta charset="UTF-8">
+	<title>Pages Exercise</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    <!-- name and picture card -->
-    <div class="card">
-        <div class="profile">
-            <img src="portrait.jpg">
-        </div>
-        <h1>Andrew Lefurge</h1>
-        <h2><span>IGME 230</span></h2>
-    </div>
-    <!-- projects card-->
-    <div class="card">
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="index.html">Project 1: Basic Personal Page</a></li>
-        </ul>
-    </div>
-    <div class="card">
-        <h2>Exercises</h2>
-        <ul>
-            <li><a href="week1/week1.html">Week 1: Tools Setup and .htaccess</a></li>
-            <li><a href="week3a/week3a.html">Week 3a: Advanced HTML Markup</a></li>
-            <li><a href="week3b/week3b.html">Week 3b: Advanced CSS</a></li>
+	<!-- name and picture card -->
+	<div class="card">
+		<div class="profile">
+			<img src="portrait.jpg">
+		</div>
+		<h1>Andrew Lefurge</h1>
+		<h2><span>IGME 230</span></h2>
+	</div>
+	<!-- projects card -->
+	<div class="card">
+		<h2>Projects</h2>
+		<ul>
+			<li><a href="index.html">Project 1: Basic Personal Page</a></li>
+		</ul>
+	</div>
+	<!--exercises card -->
+	<div class="card">
+		<h2>Exercises</h2>
+		<ul>
+			<li><a href="week1/week1.html">Week 1: Tools Setup and .htaccess</a></li>
+			<li><a href="https://mikrowelle.github.io/">Week 2b: GitHub Pages</a></li>
+			<li><a href="week3a/week3a.html">Week 3a: Advanced HTML Markup</a></li>
+			<li><a href="week3b/week3b.html">Week 3b: Advanced CSS</a></li>
 
-        </ul>
-    </div>
+		</ul>
+	</div>
 </body>
 
 </html>
