Added link to Exercise 5a

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<li><a href="https://mikrowelle.github.io/">Week 2b: GitHub Pages</a></li>
 			<li><a href="week3a/week3a.html">Week 3a: Advanced HTML Markup</a></li>
 			<li><a href="week3b/week3b.html">Week 3b: Advanced CSS</a></li>
+			<li><a href="week5a/sample.html">Week 5a: Responsive Design Exercise </a></li>
 
 		</ul>
 	</div>
