Completed Exercise 6a and linked to it from Index

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<li><a href="week3a/week3a.html">Week 3a: Advanced HTML Markup</a></li>
 			<li><a href="week3b/week3b.html">Week 3b: Advanced CSS</a></li>
 			<li><a href="week5a/sample.html">Week 5a: Responsive Design Exercise </a></li>
+			<li><a href="week6a/holygrail.html">Week 6a: Flexbox Exercise </a></li>
 
 		</ul>
 	</div>
