Completed Holy Grail CSS Grid Exercise

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<li><a href="week3b/week3b.html">Week 3b: Advanced CSS</a></li>
 			<li><a href="week5a/sample.html">Week 5a: Responsive Design Exercise </a></li>
 			<li><a href="week6a/holygrail.html">Week 6a: Flexbox Exercise </a></li>
+			<li><a href="week6b/holygrail-grid.html">Week 6b: Holy Grail with CSS Grid </a></li>
 
 		</ul>
 	</div>
