--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 			<li><a href="week5a/sample.html">Week 5a: Responsive Design Exercise </a></li>
 			<li><a href="week6a/holygrail.html">Week 6a: Flexbox Exercise </a></li>
 			<li><a href="week6b/holygrail-grid.html">Week 6b: Holy Grail with CSS Grid </a></li>
+			<li><a href="week6c/responsive-grid.html">Week 6c: Responsive Image Gallery</a></li>
 
 		</ul>
 	</div>
