--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<li><a href="week6b/holygrail-grid.html">Week 6b: Holy Grail with CSS Grid </a></li>
 			<li><a href="week6c/responsive-grid.html">Week 6c: Responsive Image Gallery</a></li>
 			<li><a href="week7a/form.html">Week 7a: Forms Exercise</a></li>
+			<li><a href="week8a/animation.html">Week 8a: Animation </a></li>
 
 		</ul>
 	</div>
