Linked to Exercise 8a form index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 			<li><a href="week6b/holygrail-grid.html">Week 6b: Holy Grail with CSS Grid </a></li>
 			<li><a href="week6c/responsive-grid.html">Week 6c: Responsive Image Gallery</a></li>
 			<li><a href="week7a/form.html">Week 7a: Forms Exercise</a></li>
-			<li><a href="week8a/animation.html">Week 8a: Animation </a></li>
+			<li><a href="week8a/animation.html">Week 8a: Animation Exercise</a></li>
+			<li><a href="week8b/svgdemo.html">Week 8b: SVG Exercise </a></li>
 
 		</ul>
 	</div>
