--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 			<li><a href="week7a/form.html">Week 7a: Forms Exercise</a></li>
 			<li><a href="week8a/animation.html">Week 8a: Animation Exercise</a></li>
 			<li><a href="week8b/svgdemo.html">Week 8b: SVG Exercise </a></li>
+			<li><a href="week9a/dom-exercise.html">Week 9a: DOM Exercise 1 </a></li>
+			<li><a href="week9a/dom-exercise2.html">Week 9b: DOM Exercise 2 </a></li>
 
 		</ul>
 	</div>
