Completed Functions Exercise 1

--- a/week9a/dom-exercise2.html
+++ b/week9a/dom-exercise2.html
@@ -23,7 +23,6 @@
         h1 {
             font-weight: 900;
         }
-
     </style>
 
 
@@ -34,7 +33,10 @@
         <h1>Happy Little Clouds</h1>
 
         <h2>Info</h2>
-        <p>If what you're doing doesn't make you <strong>happy</strong> - you're doing the wrong thing. How to paint. That's easy. What to paint. That's much harder. We spend so much of our life looking - but never seeing. I want everybody to be happy. That's what it's all about. Remember how free clouds are. They just lay around in the sky all day long.</p>
+        <p>If what you're doing doesn't make you <strong>happy</strong> - you're doing the wrong thing. How to paint.
+            That's easy. What to paint. That's much harder. We spend so much of our life looking - but never seeing. I
+            want everybody to be happy. That's what it's all about. Remember how free clouds are. They just lay around
+            in the sky all day long.</p>
 
         <h2>Links</h2>
         <ul>
@@ -80,7 +82,8 @@
         // 9 - create a new list item
 
         let newListItem = document.createElement("li");
-        newListItem.innerHTML = "<a href='https://www.youtube.com/channel/UCxcnsr1R5Ge_fbTu5ajt8DQ'>Bob Ross YouTube Channel</a>";
+        newListItem.innerHTML =
+            "<a href='https://www.youtube.com/channel/UCxcnsr1R5Ge_fbTu5ajt8DQ'>Bob Ross YouTube Channel</a>";
 
         // 10 - insert the new list item into the existing list, before the target item
 
@@ -89,7 +92,6 @@
 
         // 11 - Delete a footer
         document.body.removeChild(document.querySelector("footer"));
-
     </script>
 </body>
 
