--- a/week9b/functions-exercise.html
+++ b/week9b/functions-exercise.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,24 +7,9 @@
     <title>Week 9 Homework</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900,900i');
-
-        html {
-            font-family: Lato;
-            font-size: 16px;
-        }
-
-        main {
-            max-width: 800px;
-            margin: 0 auto;
-            border: 1px dotted black;
-            padding: 0 10px;
-        }
-
-        h1 {
-            font-weight: 900;
-        }
-
-    </style>
+       html { font-family: Lato; font-size: 16px; }
+       main { max-width: 800px; margin: 0 auto; border: 1px dotted black; padding: 0 10px;} h1 { font-weight: 900;}
+   </style>
 
 </head>
 
@@ -40,29 +26,29 @@
 
         <ol id="foodsList">
 
+
         </ol>
 
-    </main>
+      </main>
 
     <script>
         "use strict";
-        let colors = [Violet, Indigo, Mariner Blue]; // add some colors
-        let foods = [Fried Calamari, New England Clam Chowder, Steamed Dumplings]; // add some foods
+        let colors = ["Violet", "Indigo", "Mariner Blue"]; // add some colors
+        let foods = ["Calamari", "Clam Chowder", "Sushi"]; // add some food
 
-        let newListItem = document.createElement("li");
-        let unorderedList = document.querySelector("ul");
-        for (let n of myArray) {
-            let g = myFunc(n);
-            greetings.push(g);
-        }
-        newListItem.innerHTML = "<a href='https://www.youtube.com/channel/UCxcnsr1R5Ge_fbTu5ajt8DQ'>Bob Ross YouTube Channel</a>";
+        let colorsList = document.querySelector('#colorsList');
+        let foodsList = document.querySelector('#foodsList');
 
-        function createList(listElement, array) {
-            for (let i = 0; i < array.length; i++){
+        createList(colorsList,colors);
+        createList(foodsList,foods);
 
+        function createList(item, lists){
+            for(let i = 0; i < lists.length; i++){
+                let li = document.createElement('li');
+                li.textContent = lists[i];
+                item.appendChild(li);
             }
         }
-
     </script>
 
 </body>
