Changed when my functions are called

--- a/week9b/functions-exercise.html
+++ b/week9b/functions-exercise.html
@@ -1,55 +1,70 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <title>Week 9 Homework</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900,900i');
-       html { font-family: Lato; font-size: 16px; }
-       main { max-width: 800px; margin: 0 auto; border: 1px dotted black; padding: 0 10px;} h1 { font-weight: 900;}
-   </style>
+	<meta charset="utf-8" />
+	<title>Week 9 Homework</title>
+	<style>
+		@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900,900i');
+
+		html {
+			font-family: Lato;
+			font-size: 16px;
+		}
+
+		main {
+			max-width: 800px;
+			margin: 0 auto;
+			border: 1px dotted black;
+			padding: 0 10px;
+		}
+
+		h1 {
+			font-weight: 900;
+		}
+
+	</style>
 
 </head>
 
 <body>
-    <main>
-        <h1>My Favorites</h1>
-        <h2>My Favorite Colors</h2>
+	<main>
+		<h1>My Favorites</h1>
+		<h2>My Favorite Colors</h2>
 
-        <ol id="colorsList">
+		<ol id="colorsList">
 
-        </ol>
+		</ol>
 
-        <h2>My Favorite Foods</h2>
+		<h2>My Favorite Foods</h2>
 
-        <ol id="foodsList">
+		<ol id="foodsList">
 
 
-        </ol>
+		</ol>
 
-      </main>
+	</main>
 
-    <script>
-        "use strict";
-        let colors = ["Violet", "Indigo", "Mariner Blue"]; // add some colors
-        let foods = ["Calamari", "Clam Chowder", "Sushi"]; // add some food
+	<script>
+		"use strict";
+		let colors = ["Violet", "Indigo", "Mariner Blue"]; // add some colors
+		let foods = ["Calamari", "Clam Chowder", "Sushi"]; // add some food
 
-        let colorsList = document.querySelector('#colorsList');
-        let foodsList = document.querySelector('#foodsList');
+		let colorsList = document.querySelector('#colorsList');
+		let foodsList = document.querySelector('#foodsList');
 
-        createList(colorsList,colors);
-        createList(foodsList,foods);
+		function createList(item, lists) {
+			for (let i = 0; i < lists.length; i++) {
+				let li = document.createElement('li');
+				li.textContent = lists[i];
+				item.appendChild(li);
+			}
+		}
 
-        function createList(item, lists){
-            for(let i = 0; i < lists.length; i++){
-                let li = document.createElement('li');
-                li.textContent = lists[i];
-                item.appendChild(li);
-            }
-        }
-    </script>
+		createList(colorsList, colors);
+		createList(foodsList, foods);
+
+	</script>
 
 </body>
 
