--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 			<li><a href="week9a/dom-exercise.html">Week 9a: DOM Exercise 1 </a></li>
 			<li><a href="week9a/dom-exercise2.html">Week 9a: DOM Exercise 2 </a></li>
 			<li><a href="week9b/functions-exercise.html">Week 9b: Functions Exercise</a></li>
+			<li><a href="week9b/events-exercise.html">Week 9b: JS Event Exercise</a></li>
 
 		</ul>
 	</div>
