Added Project 2 to IGME230 Directory

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<h2>Projects</h2>
 		<ul>
 			<li><a href="index.html">Project 1: Basic Personal Page</a></li>
+			<li><a href="project2/index.html">Project 2: Personal Portfolio Site</a></li>
 		</ul>
 	</div>
 	<!--exercises card -->
@@ -43,6 +44,8 @@
 			<li><a href="week9b/functions-exercise.html">Week 9b: Functions Exercise</a></li>
 			<li><a href="week9b/events-exercise.html">Week 9b: JS Event Exercise</a></li>
 			<li><a href="week10a/webstorage-exercise.html">Week 10a: JS Web Storage Exercise</a></li>
+			<li><a href="week10b/maps_start.html">Week 10b: JS Web services Exercise</a></li>
+
 
 		</ul>
 	</div>
