--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<h2>Projects</h2>
 		<ul>
 			<li><a href="index.html">Project 1: Basic Personal Page</a></li>
-			<li><a href="project2/index.html">Project 2: Personal Portfolio Site</a></li>
+			<li><a href="project2/news_deck.html">Project 2: Personal Portfolio Site</a></li>
 		</ul>
 	</div>
 	<!--exercises card -->
