--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<ul>
 			<li><a href="index.html">Project 1: Basic Personal Page</a></li>
 			<li><a href="project2/index.html">Project 2: Personal Portfolio Site</a></li>
+			<li><a href="project2/about.html">Project 2: Documentation</a></li>
 		</ul>
 	</div>
 	<!--exercises card -->
