I got the scroll to work good!

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<li><a href="week9b/events-exercise.html">Week 9b: JS Event Exercise</a></li>
 			<li><a href="week10a/webstorage-exercise.html">Week 10a: JS Web Storage Exercise</a></li>
 			<li><a href="week10b/maps_start.html">Week 10b: JS Web services Exercise</a></li>
-			<li><a href="week11a/maps_start.html">Week 11: JQuery Exercise</a></li>
+			<li><a href="Jquery_practice/jq_practice.html">Week 11: JQuery Exercise</a></li>
 
 
 		</ul>
