--- a/Jquery_practice/jq_practice.html
+++ b/Jquery_practice/jq_practice.html
@@ -76,11 +76,11 @@
 		display: flex;
 		flex-direction: column;
 	}
-	
-	button{
+
+	button {
 		padding: 17px;
 		background-color: cornflowerblue;
-		color:white;
+		color: white;
 		border: 0px;
 	}
 
@@ -142,15 +142,28 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 	$(window).scroll(function() {
-		$("nav").css({
-			"background-color": "black",
-			"opacity": ".8",
-			"position": "fixed"
-		});
-		$("a").css({
-			"transition": "color 0.2s ease-out .1s",
-			"color": "white"
-		});
+		var $height = $(window).scrollTop();
+		if ($height > 50) {
+			$("nav").css({
+				"background-color": "black",
+				"opacity": ".8",
+				"position": "fixed"
+			});
+			$("a").css({
+				"transition": "color 0.2s ease-out .1s",
+				"color": "white"
+			});
+		} else {
+			$("nav").css({
+				"background-color": "none",
+				"opacity": "1",
+				"position": "block"
+			});
+			$("a").css({
+				"transition": "color 0.2s ease-out .1s",
+				"color": "black"
+			});
+		}
 	});
 	$("#hide").click(function() {
 		$("nav").slideToggle(20);
