Basicaly am redoing project 2 at this point

--- a/Jquery_practice/jq_practice.html
+++ b/Jquery_practice/jq_practice.html
@@ -3,104 +3,88 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" href="https://use.typekit.net/xcp6ekd.css">
 	<title>Grid Practice</title>
 </head>
 
 <body>
-	<div id="ham">
-		<button id="hide">Hide/Show</button>
-	</div>
 	<nav>
-		<a href="">Home</a>
+		<h1 class="site_name">Lefurge Design</h1>
+		<div class="links">
+					<a href="">Home</a>
 		<a href="">About</a>
 		<a href="">Projects</a>
+		</div>
+
 	</nav>
 	<div class="content">
 		<div class="grid">
 			<section>
-				<h1>Heading 0</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet pretium felis. Maecenas et venenatis tellus. Praesent venenatis dapibus dolor nec convallis.</p>
+				<h1>News Deck</h1>
+				<h3>Product Concept</h3>
+				<p>People are constantly overwhelmed by the amount of information they are asked to consume on a regular basis. We are inundated with heaps of news, only a small percentage of which we actually care about. So I designed a mobile first news aggregation app that enables users to better manage and compartmentalize the news they consume.</p>
 			</section>
 			<aside>
-				<h1>Aside</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet pretium felis. Maecenas et venenatis tellus. Praesent venenatis dapibus dolor nec convallis.</p>
-
+				<h3>Role</h3>
+				<p>Visual Design, Interaction Design</p>
+				<h3>Duration</h3>
+				<p>4 Weeks, April - May 2018</p>
+				<h3>Tools</h3>
+				<p>Invision Studio</p>
+				<button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">View Deck</button>
 			</aside>
 			<article>
-				<h1>Heading 1</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet pretium felis. Maecenas et venenatis tellus. Praesent venenatis dapibus dolor nec convallis. Duis aliquam aliquet sem. Etiam mattis faucibus leo ac accumsan. Ut at nisl orci. Maecenas suscipit id nisi quis convallis. Morbi maximus nisi odio, ac euismod sem vehicula nec. Vestibulum ut euismod orci. In tortor ante, pellentesque efficitur lobortis et, dignissim id arcu. Cras sollicitudin, turpis in commodo feugiat, mauris felis tristique nisl, vitae consequat eros nisl in eros. Integer tincidunt nunc elit, sed ultrices ex placerat vitae.
+				<h2>Making News Actionable</h2>
+				<p>News is typically presented today as a never ending feed. People endlessly scroll to the bottom to see if they missed something interesting even if it isn't relevant anymore. News Deck avoids this by presenting news as a finite deck of cards which are intuitive to sort and interact with.</p>
 
-					Proin nec viverra nisl. Nam magna enim, cursus non lectus maximus, cursus porta leo. Curabitur at pretium velit. Phasellus ac feugiat elit. Nulla malesuada odio diam, id mollis ex rutrum non. Duis massa dui, bibendum sit amet dui id, congue bibendum erat. Nunc at purus at lorem auctor ullamcorper. Nullam vehicula convallis purus, ut faucibus neque finibus vitae. Integer ipsum lorem, sodales vitae nisi sit amet, malesuada rhoncus diam. Aliquam vestibulum elit at erat malesuada, a tristique ipsum finibus. Curabitur et condimentum ante, quis placerat metus. Nulla tincidunt posuere dapibus. Curabitur malesuada eget magna in iaculis.
-
-					Suspendisse id elit felis. Proin vel leo aliquam, aliquam sapien non, euismod diam. Nam sed arcu at tortor viverra scelerisque. Maecenas ac sagittis felis. Proin varius leo eu ornare scelerisque. Fusce luctus, nisi et consequat ullamcorper, lectus nulla venenatis arcu, at accumsan justo ex nec arcu. Nunc sit amet volutpat magna. Donec vehicula, erat a dapibus varius, nulla odio fringilla ex, non suscipit tortor felis id neque. Aenean non lorem quis ipsum luctus efficitur. Curabitur tristique ipsum sed lectus tincidunt eleifend. Sed consectetur quis justo eget laoreet. Donec vitae quam sit amet lectus venenatis varius. Ut at sem et risus pellentesque porta eget id dui. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In eget massa velit.
-
-					Morbi a dui id quam interdum elementum eget sollicitudin lectus. Quisque a posuere lacus, vel eleifend ante. Donec dictum interdum purus, quis vehicula sapien ultricies ac. Donec sit amet dignissim sapien, vitae cursus turpis. Curabitur accumsan urna a justo commodo lacinia. Pellentesque eget scelerisque purus, vitae scelerisque lacus. Nullam eu leo efficitur, congue libero vitae, mattis ipsum. Mauris gravida efficitur maximus. Cras faucibus viverra ipsum at vestibulum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc iaculis lectus eu maximus dapibus. Vestibulum id lorem at nibh feugiat pellentesque. Aliquam lacus nulla, auctor vitae accumsan in, ullamcorper nec tortor. Vestibulum rutrum sit amet turpis pulvinar ultricies. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+			</article>
+			<article class="gallery">
+				<div class="cell">
+					<img src="/project2/news_deck/images/Bookmark_Crop.jpg">
+				</div>
+				<div class="cell">
+					<img src="/project2/news_deck/images/insights_crop.jpg">
+				</div>
 			</article>
 			<article>
-				<h1>Heading 2</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet pretium felis. Maecenas et venenatis tellus. Praesent venenatis dapibus dolor nec convallis. Duis aliquam aliquet sem. Etiam mattis faucibus leo ac accumsan. Ut at nisl orci. Maecenas suscipit id nisi quis convallis. Morbi maximus nisi odio, ac euismod sem vehicula nec. Vestibulum ut euismod orci. In tortor ante, pellentesque efficitur lobortis et, dignissim id arcu. Cras sollicitudin, turpis in commodo feugiat, mauris felis tristique nisl, vitae consequat eros nisl in eros. Integer tincidunt nunc elit, sed ultrices ex placerat vitae.
-
-					Proin nec viverra nisl. Nam magna enim, cursus non lectus maximus, cursus porta leo. Curabitur at pretium velit. Phasellus ac feugiat elit. Nulla malesuada odio diam, id mollis ex rutrum non. Duis massa dui, bibendum sit amet dui id, congue bibendum erat. Nunc at purus at lorem auctor ullamcorper. Nullam vehicula convallis purus, ut faucibus neque finibus vitae. Integer ipsum lorem, sodales vitae nisi sit amet, malesuada rhoncus diam. Aliquam vestibulum elit at erat malesuada, a tristique ipsum finibus. Curabitur et condimentum ante, quis placerat metus. Nulla tincidunt posuere dapibus. Curabitur malesuada eget magna in iaculis.
-
-					Suspendisse id elit felis. Proin vel leo aliquam, aliquam sapien non, euismod diam. Nam sed arcu at tortor viverra scelerisque. Maecenas ac sagittis felis. Proin varius leo eu ornare scelerisque. Fusce luctus, nisi et consequat ullamcorper, lectus nulla venenatis arcu, at accumsan justo ex nec arcu. Nunc sit amet volutpat magna. Donec vehicula, erat a dapibus varius, nulla odio fringilla ex, non suscipit tortor felis id neque. Aenean non lorem quis ipsum luctus efficitur. Curabitur tristique ipsum sed lectus tincidunt eleifend. Sed consectetur quis justo eget laoreet. Donec vitae quam sit amet lectus venenatis varius. Ut at sem et risus pellentesque porta eget id dui. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In eget massa velit.
-
-					Morbi a dui id quam interdum elementum eget sollicitudin lectus. Quisque a posuere lacus, vel eleifend ante. Donec dictum interdum purus, quis vehicula sapien ultricies ac. Donec sit amet dignissim sapien, vitae cursus turpis. Curabitur accumsan urna a justo commodo lacinia. Pellentesque eget scelerisque purus, vitae scelerisque lacus. Nullam eu leo efficitur, congue libero vitae, mattis ipsum. Mauris gravida efficitur maximus. Cras faucibus viverra ipsum at vestibulum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc iaculis lectus eu maximus dapibus. Vestibulum id lorem at nibh feugiat pellentesque. Aliquam lacus nulla, auctor vitae accumsan in, ullamcorper nec tortor. Vestibulum rutrum sit amet turpis pulvinar ultricies. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-			</article>
-			<article>
-				<h1>Heading 3</h1>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet pretium felis. Maecenas et venenatis tellus. Praesent venenatis dapibus dolor nec convallis. Duis aliquam aliquet sem. Etiam mattis faucibus leo ac accumsan. Ut at nisl orci. Maecenas suscipit id nisi quis convallis. Morbi maximus nisi odio, ac euismod sem vehicula nec. Vestibulum ut euismod orci. In tortor ante, pellentesque efficitur lobortis et, dignissim id arcu. Cras sollicitudin, turpis in commodo feugiat, mauris felis tristique nisl, vitae consequat eros nisl in eros. Integer tincidunt nunc elit, sed ultrices ex placerat vitae.
-
-					Proin nec viverra nisl. Nam magna enim, cursus non lectus maximus, cursus porta leo. Curabitur at pretium velit. Phasellus ac feugiat elit. Nulla malesuada odio diam, id mollis ex rutrum non. Duis massa dui, bibendum sit amet dui id, congue bibendum erat. Nunc at purus at lorem auctor ullamcorper. Nullam vehicula convallis purus, ut faucibus neque finibus vitae. Integer ipsum lorem, sodales vitae nisi sit amet, malesuada rhoncus diam. Aliquam vestibulum elit at erat malesuada, a tristique ipsum finibus. Curabitur et condimentum ante, quis placerat metus. Nulla tincidunt posuere dapibus. Curabitur malesuada eget magna in iaculis.
-
-					Suspendisse id elit felis. Proin vel leo aliquam, aliquam sapien non, euismod diam. Nam sed arcu at tortor viverra scelerisque. Maecenas ac sagittis felis. Proin varius leo eu ornare scelerisque. Fusce luctus, nisi et consequat ullamcorper, lectus nulla venenatis arcu, at accumsan justo ex nec arcu. Nunc sit amet volutpat magna. Donec vehicula, erat a dapibus varius, nulla odio fringilla ex, non suscipit tortor felis id neque. Aenean non lorem quis ipsum luctus efficitur. Curabitur tristique ipsum sed lectus tincidunt eleifend. Sed consectetur quis justo eget laoreet. Donec vitae quam sit amet lectus venenatis varius. Ut at sem et risus pellentesque porta eget id dui. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In eget massa velit.
-
-					Morbi a dui id quam interdum elementum eget sollicitudin lectus. Quisque a posuere lacus, vel eleifend ante. Donec dictum interdum purus, quis vehicula sapien ultricies ac. Donec sit amet dignissim sapien, vitae cursus turpis. Curabitur accumsan urna a justo commodo lacinia. Pellentesque eget scelerisque purus, vitae scelerisque lacus. Nullam eu leo efficitur, congue libero vitae, mattis ipsum. Mauris gravida efficitur maximus. Cras faucibus viverra ipsum at vestibulum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc iaculis lectus eu maximus dapibus. Vestibulum id lorem at nibh feugiat pellentesque. Aliquam lacus nulla, auctor vitae accumsan in, ullamcorper nec tortor. Vestibulum rutrum sit amet turpis pulvinar ultricies. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus..</p>
+				<h2>Getting Insights</h2>
+				<p>In addition to making news more actionable, news deck will actively make suggestions for how the user can reduce the amount of news in their feed. These "Insights" are based on user behavior and can either be acted on or dismissed.</p>
 			</article>
 		</div>
 	</div>
 </body>
 <style>
+	@import url('https://rsms.me/inter/inter-ui.css');
+
 	html,
 	body {
-		font-family: sans-serif;
+		font-family: 'Inter UI', sans-serif;
+		font-size: 16px;
 		margin: 0;
 		padding: 0;
-	}
-
-	#ham {
-		position: fixed;
-		z-index: 1;
-		display: flex;
-		flex-direction: column;
-	}
-
-	button {
-		padding: 17px;
-		background-color: cornflowerblue;
-		color: white;
-		border: 0px;
+		background-color: #fafafa;
 	}
 
 	nav {
 		width: 100%;
 		display: flex;
-		justify-content: center;
+		justify-content: space-around;
+		flex-wrap: wrap;
 		align-items: center;
 		transition: all 0.2s ease-out .1s;
+		position: fixed;
 	}
 
 	.content {
 		display: flex;
 		justify-content: center;
-		padding: 0 16px;
+		padding: 8em 1em;
 	}
 
 	.grid {
 		display: grid;
-		grid-template-columns: 2fr 1fr;
+		grid-template-columns: 3fr 1fr;
 		max-width: 1000px;
 	}
 
@@ -108,23 +92,92 @@
 		grid-column: 1/ span 2;
 	}
 
+	.gallery {
+		padding: 2em;
+		grid-column: 1/ span 2;
+		max-width: 100%;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	.gallery .cell {
+		max-width: 300px;
+		margin: 0 1em;
+	}
+
+	.gallery img {
+		width: 100%;
+	}
+
+	button {
+		background: #5182FF;
+		border: none;
+		border-radius: 8px;
+		width: 100%;
+		height: 3em;
+		text-align: center;
+		color: #fafafa;
+	}
+
 	section {
 		margin-right: 16px;
 	}
 
+	.site_name {
+		font-family: bello-pro, sans-serif;
+		font-weight: 400;
+		font-style: normal;
+	}
+
+	h1 {
+		font-size: 2em;
+		font-weight: bold;
+
+		margin-top: 0;
+		margin-bottom: .25em;
+	}
+
+	h2 {
+		font-size: 1.5em;
+		font-weight: bold;
+	}
+
+	h3 {
+		font-size: 1em;
+		font-weight: normal;
+		color: #5182FF;
+
+		margin-top: 0;
+		margin-bottom: 1em;
+	}
+
+	aside h3 {
+		margin-top: 0;
+		margin-bottom: .25em;
+	}
+
+	aside p {
+		margin-top: 0;
+		margin-bottom: 1em;
+	}
+
 	p {
+		color: #333333;
 		line-height: 2em;
+		margin-top: 0;
+		margin-bottom: 2em;
 	}
 
 	a {
 		color: black;
-		padding: 16px;
+		padding: 1em;
 		text-decoration: none;
 		transition: all 0.2 ease-out 0;
 	}
 
 	a:hover {
-		color: dodgerblue;
+		background-color: dodgerblue;
 	}
 
 	@media (max-width:640px) {
@@ -146,27 +199,20 @@
 		if ($height > 50) {
 			$("nav").css({
 				"background-color": "black",
-				"opacity": ".8",
-				"position": "fixed"
+				"opacity": ".8"
 			});
 			$("a").css({
-				"transition": "color 0.2s ease-out .1s",
-				"color": "white"
+				"color": "#fafafa"
 			});
 		} else {
 			$("nav").css({
-				"background-color": "none",
-				"opacity": "1",
-				"position": "block"
+				"background-color": "#fafafa",
+				"opacity": "1"
 			});
 			$("a").css({
-				"transition": "color 0.2s ease-out .1s",
 				"color": "black"
 			});
 		}
-	});
-	$("#hide").click(function() {
-		$("nav").slideToggle(20);
 	});
 </script>
 
