--- a/Jquery_practice/jq_practice.html
+++ b/Jquery_practice/jq_practice.html
@@ -12,9 +12,9 @@
 	<nav>
 		<h1 class="site_name">Lefurge Design</h1>
 		<div class="links">
-					<a href="">Home</a>
-		<a href="">About</a>
-		<a href="">Projects</a>
+			<a href="">About</a>
+			<a href="">Product Design</a>
+			<a href="">Motion Graphics</a>
 		</div>
 
 	</nav>
@@ -128,6 +128,8 @@
 		font-family: bello-pro, sans-serif;
 		font-weight: 400;
 		font-style: normal;
+		font-size: 2em;
+		transition: all 0.2 ease-out 0;
 	}
 
 	h1 {
@@ -202,7 +204,12 @@
 				"opacity": ".8"
 			});
 			$("a").css({
-				"color": "#fafafa"
+				"color": "#fafafa",
+				"opacity": "1"
+			});
+			$(".site_name").css({
+				"color": "#fafafa",
+				"opacity": "1"
 			});
 		} else {
 			$("nav").css({
@@ -210,7 +217,10 @@
 				"opacity": "1"
 			});
 			$("a").css({
-				"color": "black"
+				"color": "#333333"
+			});
+			$(".site_name").css({
+				"color": "#333333"
 			});
 		}
 	});
