--- a/Jquery_practice/jq_practice.html
+++ b/Jquery_practice/jq_practice.html
@@ -10,16 +10,20 @@
 
 <body>
 	<nav>
-		<h1 class="site_name">Lefurge Design</h1>
-		<div class="links">
-			<a href="">About</a>
-			<a href="">Product Design</a>
-			<a href="">Motion Graphics</a>
+		<div class="nav_elements">
+			<h1 class="site_name">Lefurge Design</h1>
+			<div class="links">
+				<a href="">About</a>
+				<a href="">Product Design</a>
+				<a href="">Motion Graphics</a>
+			</div>
 		</div>
-
 	</nav>
 	<div class="content">
 		<div class="grid">
+			<div>
+
+			</div>
 			<section>
 				<h1>News Deck</h1>
 				<h3>Product Concept</h3>
@@ -69,11 +73,19 @@
 	nav {
 		width: 100%;
 		display: flex;
-		justify-content: space-around;
+		justify-content: center;
 		flex-wrap: wrap;
 		align-items: center;
 		transition: all 0.2s ease-out .1s;
 		position: fixed;
+	}
+
+	.nav_elements{
+		width: 1000px;
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		align-items: center;
 	}
 
 	.content {
@@ -129,6 +141,9 @@
 		font-weight: 400;
 		font-style: normal;
 		font-size: 2em;
+
+		margin: 0;
+
 		transition: all 0.2 ease-out 0;
 	}
 
