Progress on Pixel Grid Exercise

--- a/week12a/pixel-artist.html
+++ b/week12a/pixel-artist.html
@@ -121,7 +121,7 @@
         //const pixelGrid = document.querySelector("#pixelGrid");
 
         pixelGrid.style.gridTemplateRows = `repeat(${numRows}, ${cellSize}px)`;
-        pixelGrid.style.gridTemplateColumns = `repeat(${numCols}, ${cellSize}px)`S;
+        pixelGrid.style.gridTemplateColumns = `repeat(${numCols}, ${cellSize}px)`;
 
     </script>
 </body>
