--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
 	<title>Pages Exercise</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
@@ -47,6 +48,7 @@
 			<li><a href="week10a/webstorage-exercise.html">Week 10a: JS Web Storage Exercise</a></li>
 			<li><a href="week10b/maps_start.html">Week 10b: JS Web services Exercise</a></li>
 			<li><a href="Jquery_practice/jq_practice.html">Week 11: JQuery Exercise</a></li>
+			<li><a href="week12a/pixel-artist.html">Week 12a: Pixel Artist Exercise</a></li>
 
 
 		</ul>
