--- a/week12a/pixel-artist.html
+++ b/week12a/pixel-artist.html
@@ -120,7 +120,7 @@
 		}
 
 		let pixelGrid = document.querySelector("#pixelGrid");
-		pixelGrid.style.gridTemplateRows = `repeat(${numRows}, ${cellSize}px)`; //same as "repeat( "+numRows+", "+cellSize+"px)";
+		pixelGrid.style.gridTemplateRows = `repeat(${numRows}, ${cellSize}px)`;
 		pixelGrid.style.gridTemplateColumns = `repeat(${numCols}, ${cellSize}px)`;
 
 		let color = $("#colorChooser").val();
