Personal Site header image progress

--- a/jquery-interaction/jquery-slide-panel.html
+++ b/jquery-interaction/jquery-slide-panel.html
@@ -63,7 +63,7 @@
     <script>
 
         $("#togglebar").click(function () {
-            $("#menu").slideToggle("slow");
+            $("#menu").slideToggle("fast");
         });
 
     </script>
