--- a/final/index.html
+++ b/final/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="https://use.typekit.net/xcp6ekd.css">
-	<title>Grid Practice</title>
+	<title>Andrew Lefurge - News Deck</title>
 </head>
 
 <body>
@@ -19,8 +19,15 @@
 			</div>
 		</div>
 	</nav>
+	<header>
+		<h1>News Deck</h1>
+		<img class="slide" src="images/daniil-silantev-1147022-unsplash_crop_high_res.jpg" alt="Warm Forest Photo">
+		<img class="slide" src="images/john-westrock-1075374-unsplash_crop_high_res.jpg" alt="Foggy Forest Photo">
+		<img class="slide" src="images/marita-kavelashvili-1151412-unsplash_crop_high_res.jpg" alt="Foggy Forest Valley Photo">
+	</header>
 	<div class="content">
 		<div class="grid">
+
 			<section>
 				<h1>News Deck</h1>
 				<h3>Product Concept</h3>
@@ -30,7 +37,7 @@
 				<h3>Role</h3>
 				<p>Visual Design, Interaction Design</p>
 				<h3>Duration</h3>
-				<p>4 Weeks, April - May 2018</p>
+				<p>April - May 2018</p>
 				<h3>Tools</h3>
 				<p>Invision Studio</p>
 				<button onclick="window.location.href='https://paper.dropbox.com/doc/NewsDeck-News-Aggregation--ARD5biCMdRHmiYX9fU76vpcJAg-BNrcUzAmlBXhfyAavQUSZ'" class="deckButt">View Deck</button>
@@ -88,7 +95,7 @@
 	.content {
 		display: flex;
 		justify-content: center;
-		padding: 8em 1em;
+		padding: 4em 1.5em;
 	}
 
 	.grid {
@@ -99,6 +106,11 @@
 
 	article {
 		grid-column: 1/ span 2;
+	}
+
+	header {
+		max-width: 100%;
+		max-height: 100%;
 	}
 
 	.gallery {
@@ -119,6 +131,11 @@
 		width: 100%;
 	}
 
+	.slide {
+		display: none;
+		max-width: 100%;
+	}
+
 	button {
 		background: #5182FF;
 		border: none;
@@ -127,6 +144,10 @@
 		height: 3em;
 		text-align: center;
 		color: #fafafa;
+	}
+
+	button:hover {
+		transform: rotate3d(180deg);
 	}
 
 	section {
@@ -139,9 +160,30 @@
 		font-style: normal;
 		font-size: 2em;
 
-		margin: 0;
+		margin: 0 0 0 .5em;
 
 		transition: all 0.2 ease-out 0;
+	}
+
+	header h1 {
+		font-size: 5vw;
+
+		position: absolute;
+
+		left: 50%;
+		-webkit-transform: translateX(-50%);
+		transform: translateX(-50%);
+
+		top: 50%;
+
+		color: white;
+		background-color: black;
+		padding: .25em;
+		opacity: .8;
+		border-radius: 8px;
+
+		transition: all 0.5s ease-out .1s;
+
 	}
 
 	h1 {
@@ -192,6 +234,7 @@
 
 	a:hover {
 		background-color: dodgerblue;
+		color: #fafafa;
 	}
 
 	@media (max-width:640px) {
@@ -208,6 +251,24 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
+	//makes the carousal change
+	var myIndex = 0;
+	carousel();
+
+	function carousel() {
+		var i;
+		var x = document.getElementsByClassName("slide");
+		for (i = 0; i < x.length; i++) {
+			x[i].style.display = "none";
+		}
+		myIndex++;
+		if (myIndex > x.length) {
+			myIndex = 1
+		}
+		x[myIndex - 1].style.display = "block";
+		setTimeout(carousel, 4000);
+	}
+
 	$(window).scroll(function() {
 		var $height = $(window).scrollTop();
 		if ($height > 50) {
@@ -223,16 +284,22 @@
 				"color": "#fafafa",
 				"opacity": "1"
 			});
+			$("header h1").css({
+				"opacity": "0"
+			});
 		} else {
 			$("nav").css({
-				"background-color": "#fafafa",
-				"opacity": "1"
+				"opacity": "1",
+				"background": "none"
 			});
 			$("a").css({
 				"color": "#333333"
 			});
 			$(".site_name").css({
 				"color": "#333333"
+			});
+			$("header h1").css({
+				"opacity": ".8"
 			});
 		}
 	});
