--- a/final/index.html
+++ b/final/index.html
@@ -20,7 +20,9 @@
 		</div>
 	</nav>
 	<header>
-		<h1>News Deck</h1>
+		<div>
+			<h1>News Deck</h1>
+		</div>
 		<img class="slide" src="images/daniil-silantev-1147022-unsplash_crop_high_res.jpg" alt="Warm Forest Photo">
 		<img class="slide" src="images/john-westrock-1075374-unsplash_crop_high_res.jpg" alt="Foggy Forest Photo">
 		<img class="slide" src="images/marita-kavelashvili-1151412-unsplash_crop_high_res.jpg" alt="Foggy Forest Valley Photo">
@@ -113,6 +115,20 @@
 		max-height: 100%;
 	}
 
+	header div {
+		margin: auto;
+		position: absolute;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+	}
+
 	.gallery {
 		padding: 2em;
 		grid-column: 1/ span 2;
@@ -167,14 +183,6 @@
 
 	header h1 {
 		font-size: 5vw;
-
-		position: absolute;
-
-		left: 50%;
-		-webkit-transform: translateX(-50%);
-		transform: translateX(-50%);
-
-		top: 50%;
 
 		color: white;
 		background-color: black;
