--- a/final/index.html
+++ b/final/index.html
@@ -84,6 +84,7 @@
 		align-items: center;
 		transition: all 0.2s ease-out .1s;
 		position: fixed;
+		z-index: 1;
 	}
 
 	.nav_elements {
@@ -190,7 +191,7 @@
 		opacity: .8;
 		border-radius: 8px;
 
-		transition: all 0.5s ease-out .1s;
+		transition: all 0.2s ease-out .1s;
 
 	}
 
