Added final WIP to directory

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<li><a href="index.html">Project 1: Basic Personal Page</a></li>
 			<li><a href="project2/index.html">Project 2: Personal Portfolio Site</a></li>
 			<li><a href="project2/about.html">Project 2: Documentation</a></li>
+			<li><a href="final/index.html">Final Project WIP</a></li>
 		</ul>
 	</div>
 	<!--exercises card -->
