--- a/final/index.html
+++ b/final/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="https://use.typekit.net/xcp6ekd.css">
+	<link rel="stylesheet" href="style.css">
 	<title>Andrew Lefurge - News Deck</title>
 </head>
 
@@ -65,207 +66,6 @@
 		</div>
 	</div>
 </body>
-<style>
-	@import url('https://rsms.me/inter/inter-ui.css');
-
-	html,
-	body {
-		font-family: 'Inter UI', sans-serif;
-		font-size: 16px;
-		margin: 0;
-		padding: 0;
-		background-color: #fafafa;
-	}
-
-	nav {
-		width: 100%;
-		display: flex;
-		justify-content: center;
-		flex-wrap: wrap;
-		align-items: center;
-		transition: all 0.2s ease-out .1s;
-		position: fixed;
-		z-index: 1;
-	}
-
-	.nav_elements {
-		width: 1000px;
-		display: flex;
-		justify-content: space-between;
-		flex-wrap: wrap;
-		align-items: center;
-	}
-
-	.content {
-		display: flex;
-		justify-content: center;
-		padding: 4em 1.5em;
-	}
-
-	.grid {
-		display: grid;
-		grid-template-columns: 3fr 1fr;
-		max-width: 1000px;
-	}
-
-	article {
-		grid-column: 1/ span 2;
-	}
-
-	header {
-		max-width: 100%;
-		max-height: 100%;
-	}
-
-	header div {
-		margin: auto;
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-
-		transition: opacity 0.2s ease-out .1s;
-
-	}
-
-	.gallery {
-		padding: 2em;
-		grid-column: 1/ span 2;
-		max-width: 100%;
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
-	}
-
-	.gallery .cell {
-		max-width: 300px;
-		margin: 0 1em;
-	}
-
-	.gallery img {
-		width: 100%;
-	}
-
-	.slide {
-		display: none;
-		max-width: 100%;
-	}
-
-	button {
-		background: #5182FF;
-		border: none;
-		border-radius: 8px;
-		width: 100%;
-		height: 3em;
-		text-align: center;
-		color: #fafafa;
-	}
-
-	button:hover {
-		transform: rotate3d(180deg);
-	}
-
-	section {
-		margin-right: 16px;
-	}
-
-	.site_name {
-		font-family: bello-pro, sans-serif;
-		font-weight: 400;
-		font-style: normal;
-		font-size: 2em;
-
-		margin: 0 0 0 .5em;
-
-		transition: all 0.2 ease-out 0;
-	}
-
-	header .icon {
-		opacity: .8;
-		width: 4vw;
-	}
-
-	header h1 {
-		font-size: 5vw;
-
-		color: white;
-		background-color: black;
-		padding: .25em;
-		opacity: .8;
-		border-radius: 8px;
-	}
-
-	h1 {
-		font-size: 2em;
-		font-weight: bold;
-
-		margin-top: 0;
-		margin-bottom: .25em;
-	}
-
-	h2 {
-		font-size: 1.5em;
-		font-weight: bold;
-	}
-
-	h3 {
-		font-size: 1em;
-		font-weight: normal;
-		color: #5182FF;
-
-		margin-top: 0;
-		margin-bottom: 1em;
-	}
-
-	aside h3 {
-		margin-top: 0;
-		margin-bottom: .25em;
-	}
-
-	aside p {
-		margin-top: 0;
-		margin-bottom: 1em;
-	}
-
-	p {
-		color: #333333;
-		line-height: 2em;
-		margin-top: 0;
-		margin-bottom: 2em;
-	}
-
-	a {
-		color: black;
-		padding: 1em;
-		text-decoration: none;
-		transition: all 0.2 ease-out 0;
-	}
-
-	a:hover {
-		background-color: dodgerblue;
-		color: #fafafa;
-	}
-
-	@media (max-width:640px) {
-		section {
-			grid-column: 1/ span 2;
-			margin: 0;
-		}
-
-		aside {
-			grid-column: 1/ span 2;
-		}
-		header div{
-			display: none;
-		}
-	}
-</style>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
