linked to interactivity exercise

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 			<li><a href="week10b/maps_start.html">Week 10b: JS Web services Exercise</a></li>
 			<li><a href="Jquery_practice/jq_practice.html">Week 11: JQuery Exercise</a></li>
 			<li><a href="week12a/pixel-artist.html">Week 12a: Pixel Artist Exercise</a></li>
+			<li><a href="final/index.html">Week 12b: Interactivity Exercise</a></li>
 
 
 		</ul>
