Started the PHP Exercise

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 			<li><a href="week12a/pixel-artist.html">Week 12a: Pixel Artist Exercise</a></li>
 			<li><a href="final/index.html">Week 12b: Interactivity Exercise</a></li>
 			<li><a href="ajax/ajax-jquery">Week 13a: AJAX Exercise</a></li>
+			<li><a href="acl3700.cad.rit.edu/formail/form.html">Week 13a: PHP Form Exercise</a></li>
 
 
 		</ul>
